force-app/main/default/objects/cgcloud__Order_Item_Template__c/cgcloud__Order_Item_Template__c.object-meta.xml
<CustomObject>
    <description>Template which controls the behaviour of a order item template. For example &apos;OrderEntry&apos; is a important template, which lets the sales document behave like an order entry.</description>
    <label>Order Item Template</label>
    <nameField>
        <label>Order Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Item Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>