force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The attribute used to enable or disable the current template</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>