force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Add_Allowed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Add_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the user can add items belonging to the item template in question.</description>
    <label>Mobility: Add Allowed</label>
    <type>Checkbox</type>
</CustomField>