force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Assortment_Relation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Assortment_Relation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the assignment of products to sales document item templates within the customer selling assortment has to be considered or not.

- No: The system doesn&apos;t consider any assignment.

- Yes: The system filters the disposal list subject to the assignment. The validation although checks the assignment of each product to the according sales document item template.</description>
    <label>Assortment Relation</label>
    <type>Checkbox</type>
</CustomField>