force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Calculation_Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Group__c</fullName>
    <description>Attribute allows to classify order item templates in order to identify the item template in a complex pricing calculation step.</description>
    <label>Calculation Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>FreeItem</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>