force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Check_Inventory_Overdraft__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Inventory_Overdraft__c</fullName>
    <description>Controls whether and how overdrawing the user inventory is checked</description>
    <label>Check Inventory Overdraft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>