force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Check_Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Max_Quantity__c</fullName>
    <description>Is used to prevent large quantities by mistake.

Options:

- Yes: The system has to validate the max quantity when saving the sales document.

- Warning: The system only shows a warning that the max quantity threshold is violated. Nevertheless, the sales document item is saved.

- No: The system doesn&apos;t check the max quantity.</description>
    <label>Check Max Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>