force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Closed_Listing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Closed_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether an order quantity for a product that is not found by the orderer listing algorithm can be entered for this sales document item template.</description>
    <label>Closed Listing</label>
    <type>Checkbox</type>
</CustomField>