force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Complex_Pricing_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Complex_Pricing_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Order item tempate can be used for complex scenarios.</description>
    <label>Complex Pricing Relevant</label>
    <type>Checkbox</type>
</CustomField>