force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Consider_Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Delivery_State__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Must the delivery of a product be considered. For return items the delivery state has not to be considered.</description>
    <label>Consider Delivery State</label>
    <type>Checkbox</type>
</CustomField>