force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Default_Logistic_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Logistic_Unit__c</fullName>
    <description>Unit to preset</description>
    <label>Default Logistic Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>StockTaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>