force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_1__c</fullName>
    <description>Language dependent description 1.</description>
    <label>Description Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>