force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Exclude_Order_Rounding__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Exclude_Order_Rounding__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude Quantity Rounding.</description>
    <label>Exclude Quantity Rounding</label>
    <type>Checkbox</type>
</CustomField>