force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Explicit_Default_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Explicit_Default_Unit__c</fullName>
    <description>Default Unit
          Unit to preset the Order_Item.UoM.
          Used when Use_Product_Logistic !=&apos;Yes&apos;.</description>
    <label>Explicit Default Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ConsumerUnit</fullName>
            </value>
            <value>
                <fullName>SalesUnit</fullName>
            </value>
            <value>
                <fullName>Layer</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>