force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Item_Protect_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Item_Protect_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Protect Policy</label>
    <type>Checkbox</type>
</CustomField>