force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Logistic_Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Logistic_Category__c</fullName>
    <description>Controls which logistical unit types can be chosen for item of this template.</description>
    <label>Logistic Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Stocktaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>