force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Controls the maximum quantity that can be orderer of a any product using this order item template.</description>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>