force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Mobility_Logistic_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Logistic_Unit__c</fullName>
    <label>Mobility: Logistic Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ConsumerUnit</fullName>
            </value>
            <value>
                <fullName>OrderUnit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>