force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Modification_Reason__c</fullName>
    <description>Specifies whether the user must enter a reason if the preordered quantity has been modified.</description>
    <inlineHelpText>Attribute at present not used.</inlineHelpText>
    <label>Modification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NotReq</fullName>
            </value>
            <value>
                <fullName>Opt</fullName>
            </value>
            <value>
                <fullName>Mand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>