force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Modification_Reasons__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Modification_Reasons__c</fullName>
    <description>Reason for modification of preordered quantity on the mobile device.</description>
    <label>Modification Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>Less</fullName>
            </value>
            <value>
                <fullName>WrongPrd</fullName>
            </value>
            <value>
                <fullName>IncOrder</fullName>
            </value>
            <value>
                <fullName>DmgByDriver</fullName>
            </value>
            <value>
                <fullName>Nopayment</fullName>
            </value>
            <value>
                <fullName>TMStock</fullName>
            </value>
            <value>
                <fullName>WrDel</fullName>
            </value>
            <value>
                <fullName>FGReturn</fullName>
            </value>
            <value>
                <fullName>BadPrd</fullName>
            </value>
            <value>
                <fullName>OutTrStock</fullName>
            </value>
            <value>
                <fullName>TckTransfer</fullName>
            </value>
            <value>
                <fullName>MissCount</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>