force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Modify_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Modify_Quantity__c</fullName>
    <description>Modify Quantity</description>
    <inlineHelpText>This setting is observed only for special orders, deliveries, truck loads and free items generated via pricing</inlineHelpText>
    <label>Modify Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Only Decrease</fullName>
            </value>
            <value>
                <fullName>Only Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>