force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Movement_Direction__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Movement_Direction__c</fullName>
    <description>Denotes what type of movement is associated with the order</description>
    <label>Movement Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>