force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Permits_Printing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Permits_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the order item of this template will be printed or not.</description>
    <label>Permits Printing</label>
    <type>Checkbox</type>
</CustomField>