force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Price_Effect__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Effect__c</fullName>
    <description>Describes the effect of the item template on the total value.</description>
    <label>Price Effect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>