force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Quantity_Suggestion_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quantity_Suggestion_Policy__c</fullName>
    <description>The attribute specifies whether a order quantity will be suggested in the disposal list and whether the suggestion will be based on the ordered quantity or on the delivered (invoiced quantity) of the item in question.</description>
    <label>Quantity Suggestion Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>OrderedQuantity</fullName>
            </value>
            <value>
                <fullName>DeliveredQuantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>