force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Save_Zero_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Save_Zero_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A Order item based on the respective item template will be saved when the item has been modified but still has 0 quantity with order item</description>
    <label>Save Zero Quantity</label>
    <type>Checkbox</type>
</CustomField>