force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Scanning_Increment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scanning_Increment__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Scanning Increment.</description>
    <label>Scanning Increment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>