force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Short_Text__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Text__c</fullName>
    <label>Short Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>