force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__UoM_Scan_Behavior__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UoM_Scan_Behavior__c</fullName>
    <description>UoM Scan Behavior</description>
    <label>UoM Scan Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Barcode</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>