force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__UoM_Scan_Default_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UoM_Scan_Default_Unit__c</fullName>
    <description>UoM Scan Default Unit</description>
    <label>UoM Scan Default Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SalesUnit</fullName>
                <default>true</default>
                <label>SalesUnit</label>
            </value>
            <value>
                <fullName>ConsumerUnit</fullName>
            </value>
            <value>
                <fullName>Layer</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>