force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Use_Product_Logistic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Product_Logistic__c</fullName>
    <description>Controls how the logistics information for a product has to be considered.</description>
    <label>Use Product Logistic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>