force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__Use_Quota__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the quota relationships and attributes have to be considered or not.</description>
    <label>Use Quota</label>
    <type>Checkbox</type>
</CustomField>