force-app/main/default/objects/cgcloud__Order_Item_Template__c/fields/cgcloud__User_Special_Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Special_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Special Price</description>
    <label>User Special Price</label>
    <type>Checkbox</type>
</CustomField>