force-app/main/default/objects/cgcloud__Order_Item_Template__c/recordTypes/cgcloud__Truck_Load.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Truck_Load</fullName>
    <active>true</active>
    <description>Truck Load record type for Order Item Template</description>
    <label>Truck Load</label>
</RecordType>